# LOH-LENHS

./: README.md  about.py  conversor.py  custos.py  data_processing.py  database.py  energy_consumption.py  file_manager.py  graph_drawing.py  hydric.py  main.py  main.spec  parameters.py  parameters_windows.py  pdf_export.py  pyproject.toml  table.py  tax_window.py  tooltip_frame.py  water_consumption.py  water_database.py  welcome_screen.py
app/: __init__.py  data_processing.py  file_manager.py  global_variables.py  pdf_export.py
app/windows/: about.py  conversor.py  custos.py  database.py  energy_consumption.py  graph_drawing.py  hydric.py  parameters.py  parameters_windows.py  table.py  tax_window.py  tooltip_frame.py  water_consumption.py  water_database.py  welcome_screen.py
assets/files/: pis_cofins_avarage.json
files/: ajuste2polos.json  ajuste4polos.json  icms.json  pis_cofins.json  rendimento.json  water_database.json
